feat: adds authentication
