# application/grpc/server.go
@@ -6,20 +6,25 @@ import (
 	"net"
 
 	"dev.azure.com/c4ut/TimeClock/_git/employee-service/application/grpc/pb"
-	"dev.azure.com/c4ut/TimeClock/_git/employee-service/domain/service"
+	_service "dev.azure.com/c4ut/TimeClock/_git/employee-service/domain/service"
 	"dev.azure.com/c4ut/TimeClock/_git/employee-service/infrastructure/external"
 	"dev.azure.com/c4ut/TimeClock/_git/employee-service/infrastructure/repository"
 	"google.golang.org/grpc"
 	"google.golang.org/grpc/reflection"
 )
 
-func StartGrpcServer(keycloak *external.Keycloak, port int) {
+func StartGrpcServer(keycloak *external.Keycloak, service pb.AuthServiceClient, port int) {
 
+	authService := _service.NewAuthService(service)
+	interceptor := NewAuthInterceptor(authService)
 	employeeRepository := repository.NewKeycloakEmployeeRepository(keycloak)
-	employeeService := service.NewEmployeeService(employeeRepository)
+	employeeService := _service.NewEmployeeService(employeeRepository)
 	employeeGrpcService := NewEmployeeGrpcService(employeeService)
 
-	grpcServer := grpc.NewServer()
+	grpcServer := grpc.NewServer(
+		grpc.UnaryInterceptor(interceptor.Unary()),
+		grpc.StreamInterceptor(interceptor.Stream()),
+	)
 	reflection.Register(grpcServer)
 	pb.RegisterEmployeeServiceServer(grpcServer, employeeGrpcService)
 
