# application/rest/docs/swagger.json
@@ -14,6 +14,11 @@
     "paths": {
         "/employees": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "create employee",
                 "consumes": [
                     "application/json"
@@ -61,6 +66,11 @@
         },
         "/employees/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Router for find a employee",
                 "consumes": [
                     "application/json"
@@ -106,6 +116,11 @@
         },
         "/employees/{id}/password": {
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Router for set a employee password",
                 "consumes": [
                     "application/json"
@@ -250,6 +265,13 @@
                     "example": false
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
